@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/time.c: Real change is to add a missing call to fix_player - without
+   this new players would be getting messed up maxsp/maxgrace values.  Cleaned
+   up formatting in move_player_changer() while doing the other change.
+   MSW 2003-09-28
+
 common/living.c, include/libproto.h: Update some functions to take 64 bit int
    values for exp usage.
 random_maps/random_map.c: Don't ever make rogue maps symmetric -
